<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    tools:context="com.example.mohamedsobhy.scorescounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamA_string"
                android:textSize="20sp"
                android:textColor="@color/black_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                />

            <TextView
                android:id="@+id/score_teamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black_color"
                />

            <Button
                android:id="@+id/free_point_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_point"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textStyle="bold"
                android:onClick="freePointTeamA"
                android:textColor="@color/black_color"
                />

            <Button
                android:id="@+id/two_point_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_points"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textStyle="bold"
                android:onClick="twoPointsTeamA"
                android:textColor="@color/black_color"
                />
            <Button
                android:id="@+id/three_point_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_points"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textStyle="bold"
                android:onClick="threePointsTeamA"
                android:textColor="@color/black_color"
                />
            <Button
                android:id="@+id/four_point_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four_points"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textStyle="bold"
                android:onClick="fourPointsTeamA"
                android:textColor="@color/black_color" />

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamB_string"
                android:textSize="20sp"
                android:textColor="@color/black_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                />

            <TextView
                android:id="@+id/score_teamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black_color"
                />

            <Button
                android:id="@+id/free_point_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_point"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textStyle="bold"
                android:onClick="freePointTeamB"
                android:textColor="@color/black_color"
                />

            <Button
                android:id="@+id/two_point_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_points"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textStyle="bold"
                android:onClick="twoPointsTeamB"
                android:textColor="@color/black_color"
                />
            <Button
                android:id="@+id/three_point_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_points"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textStyle="bold"
                android:onClick="threePointsTeamB"
                android:textColor="@color/black_color"
                />
            <Button
                android:id="@+id/four_point_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four_points"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textStyle="bold"
                android:onClick="fourPointsTeamB"
                android:textColor="@color/black_color" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_btn_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="resetScores"
        android:textColor="@color/black_color"/>

</RelativeLayout>